dashboard/apps/macro_manager.fma/css/style.css
body {
  background: #eee;
}

h1, h2, h3, h4, h5, h6 {
  color: #666;
}

input[type=number]::-webkit-inner-spin-button, 
input[type=number]::-webkit-outer-spin-button { 
   -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;
    margin: 0; 
}

.noselect {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    cursor: pointer;
}

td.run-control {
    width: 60px;
    cursor: pointer;
    padding: .3em;
    text-align: center;
    margin-left: 1em;
    min-width: 35px;
}


td.run-control img {
    margin-left: .5em;
    padding: .3em;
    border-radius: 5px;
    border: 1px solid #bbb;
    box-shadow: .5px .5px .5px #aaaaaa;
    transform: translateX(-5px);
    height: 40px;
    width: 40px;
    background: inherit;

}

td.edit-control {
    width: 60px;
    cursor: pointer;
    padding: .3em;
    min-width: 35px;
    
}

td.edit-control img{
    padding: .5em;
    border: 1px solid #bbb;
    border-radius: 5px;
    box-shadow: .5px .5px .5px #aaaaaa;
    height: 40px;
    width: 40px;
    background: inherit
}

td.delete-control {
    padding: .3em;
    width: 60px;
    cursor: pointer;
    margin-left: 1em; 
    min-width: 35px;
}

td.delete-control img {
    padding: .5em;
    border-radius: 5px;
    border: 1px solid #bbb;
    box-shadow: .5px .5px .5px #aaaaaa;
    height: 40px;
    width: 40px;
    background: inherit;
}

@media screen and (max-width: 480px) {
    td.delete-control img,  td.edit-control img, td.run-control img {
        height: 25px;
        width: 25px;
        padding: .1em;
    }

    td.edit-control, td.delete-control, td.number {
        width: 40px;
    }

    td:nth-child(4){
        display: none;
    }
}

.table-outer {
  margin: 1em;
}

input[type=text] { 
 -moz-user-select: text;
 -khtml-user-select: text;
 -webkit-user-select: text;
 -ms-user-select: text;
 user-select: text;
 cursor: text;
 border: none;
 background: inherit;
 box-shadow: none;
}

input[type=number] { 
 -moz-user-select: text;
 -khtml-user-select: text;
 -webkit-user-select: text;
 -ms-user-select: text;
 user-select: text;
 cursor: text;
 border: none;
 background: inherit;
 box-shadow: none;
 -moz-appearance: textfield;
}

th {
    text-align: center !important;
}

.number input, .name input, .description input{
    -webkit-appearance: textfield; 
    -moz-appearance: textfield;
     margin: 0; 
     text-align: center;
}

.number input {
    width: 3em;
}
.hidden, .hide { display:none; }


/*.edit-control, .delete-control, .number{
    width: 20px;

}

.edit-control :first-child, .delete-control :first-child, .number :first-child{
    width: 25px;

}*/

